--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,13 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.android.volley:volley:1.1.1'
 
+    //firebase
+    implementation 'com.google.firebase:firebase-database:18.0.0'
+    implementation 'com.google.firebase:firebase-storage:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+
+    //diseño bonito para chat
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+
 }
+apply plugin: 'com.google.gms.google-services'
