--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".UserHelpActivity"></activity>
+        <activity android:name=".PanicButtonActivity"></activity>
+        <activity android:name=".UserHelpActivity" />
         <activity android:name=".GetMailForgotPassword" />
         <activity android:name=".RecoverPasswordActivity" />
         <activity android:name=".ChatActivity" />
