--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PanicButtonActivity"></activity>
+        <activity android:name=".AutorizationActivity"></activity>
+        <activity android:name=".PanicButtonActivity" />
         <activity android:name=".UserHelpActivity" />
         <activity android:name=".GetMailForgotPassword" />
         <activity android:name=".RecoverPasswordActivity" />
@@ -35,6 +36,14 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
+
+        <service
+            android:name=".Notifications.MessagingService"
+            android:stopWithTask="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
